@@ -134,6 +134,22 @@ name|solr
 operator|.
 name|common
 operator|.
+name|params
+operator|.
+name|UpdateParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
 name|util
 operator|.
 name|ContentStream
@@ -347,7 +363,7 @@ argument_list|()
 operator|.
 name|getInt
 argument_list|(
-name|XmlUpdateRequestHandler
+name|UpdateParams
 operator|.
 name|COMMIT_WITHIN
 argument_list|,
@@ -364,7 +380,7 @@ argument_list|()
 operator|.
 name|getBool
 argument_list|(
-name|XmlUpdateRequestHandler
+name|UpdateParams
 operator|.
 name|OVERWRITE
 argument_list|,
