@@ -204,6 +204,22 @@ name|common
 operator|.
 name|params
 operator|.
+name|SolrParams
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|params
+operator|.
 name|UpdateParams
 import|;
 end_import
@@ -612,6 +628,14 @@ name|addCmd
 init|=
 literal|null
 decl_stmt|;
+name|SolrParams
+name|params
+init|=
+name|req
+operator|.
+name|getParams
+argument_list|()
+decl_stmt|;
 while|while
 condition|(
 literal|true
@@ -681,6 +705,23 @@ operator|new
 name|AddUpdateCommand
 argument_list|(
 name|req
+argument_list|)
+expr_stmt|;
+comment|// First look for commitWithin parameter on the request, will be overwritten for individual<add>'s
+name|addCmd
+operator|.
+name|commitWithin
+operator|=
+name|params
+operator|.
+name|getInt
+argument_list|(
+name|UpdateParams
+operator|.
+name|COMMIT_WITHIN
+argument_list|,
+operator|-
+literal|1
 argument_list|)
 expr_stmt|;
 for|for
@@ -797,6 +838,13 @@ name|currTag
 argument_list|)
 condition|)
 block|{
+if|if
+condition|(
+name|addCmd
+operator|!=
+literal|null
+condition|)
+block|{
 name|XmlUpdateRequestHandler
 operator|.
 name|log
@@ -827,6 +875,23 @@ argument_list|(
 name|addCmd
 argument_list|)
 expr_stmt|;
+block|}
+else|else
+block|{
+throw|throw
+operator|new
+name|SolrException
+argument_list|(
+name|SolrException
+operator|.
+name|ErrorCode
+operator|.
+name|BAD_REQUEST
+argument_list|,
+literal|"Unexpected<doc> tag without an<add> tag surrounding it."
+argument_list|)
+throw|;
+block|}
 block|}
 elseif|else
 if|if
