@@ -90,6 +90,64 @@ begin_import
 import|import
 name|org
 operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|common
+operator|.
+name|util
+operator|.
+name|ContentStreamBase
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|request
+operator|.
+name|SolrQueryRequest
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|response
+operator|.
+name|SolrQueryResponse
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|solr
+operator|.
+name|update
+operator|.
+name|AddUpdateCommand
+import|;
+end_import
+
+begin_import
+import|import
+name|org
+operator|.
 name|junit
 operator|.
 name|BeforeClass
@@ -372,6 +430,112 @@ operator|.
 name|toString
 argument_list|()
 argument_list|)
+expr_stmt|;
+block|}
+annotation|@
+name|Test
+DECL|method|testCommitWithin
+specifier|public
+name|void
+name|testCommitWithin
+parameter_list|()
+throws|throws
+name|Exception
+block|{
+name|String
+name|xml
+init|=
+literal|"<add>"
+operator|+
+literal|"<doc>"
+operator|+
+literal|"<field name=\"id\">12345</field>"
+operator|+
+literal|"<field name=\"name\">kitten</field>"
+operator|+
+literal|"</doc>"
+operator|+
+literal|"</add>"
+decl_stmt|;
+name|SolrQueryRequest
+name|req
+init|=
+name|req
+argument_list|(
+literal|"commitWithin"
+argument_list|,
+literal|"100"
+argument_list|)
+decl_stmt|;
+name|SolrQueryResponse
+name|rsp
+init|=
+operator|new
+name|SolrQueryResponse
+argument_list|()
+decl_stmt|;
+name|BufferingRequestProcessor
+name|p
+init|=
+operator|new
+name|BufferingRequestProcessor
+argument_list|(
+literal|null
+argument_list|)
+decl_stmt|;
+name|XMLLoader
+name|loader
+init|=
+operator|new
+name|XMLLoader
+argument_list|(
+name|p
+argument_list|,
+name|inputFactory
+argument_list|)
+decl_stmt|;
+name|loader
+operator|.
+name|load
+argument_list|(
+name|req
+argument_list|,
+name|rsp
+argument_list|,
+operator|new
+name|ContentStreamBase
+operator|.
+name|StringStream
+argument_list|(
+name|xml
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|AddUpdateCommand
+name|add
+init|=
+name|p
+operator|.
+name|addCommands
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+decl_stmt|;
+name|assertEquals
+argument_list|(
+name|add
+operator|.
+name|commitWithin
+argument_list|,
+literal|100
+argument_list|)
+expr_stmt|;
+name|req
+operator|.
+name|close
+argument_list|()
 expr_stmt|;
 block|}
 block|}
